src/App.css
/* ... */
/* add these new styles */
.image-container {
  position: relative;
  display: inline-block;
  /* filter: drop-shadow(15px 15px 0px rgba(0, 0, 0, 0.3)); */
}
.image-title {
  justify-content: center;
  position: absolute;
  text-align: center;
  left: 5px;
  right: 5px;
  background-color: #c3c3c3;
  color: black;
  font-size: 14px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  z-index: 1;
}
/* update your existing image style */
.image {
  border-bottom: solid 10px #c3c3c3;
  border-top: solid 21px #c3c3c3; /* Space for the title */
  outline: solid 1px black;
  position: relative;
}



/* CONTACT FORM (extract) */
.contact-form {
  padding: 15px 20px 0px 0px;
}
.form-row {
  /* FIXED THE MISALIGNED INPUT BOXES */
  display: grid;
  grid-template-columns: 100px 1fr;
  align-items: center;
  margin-bottom: 15px;
  gap: 10px;
}
/* GET LABELS TO BE THE SAME SIZE */
.form-row label {
  display: block;
  /* since the labels have varying styling, refrain from using this too much */
}
.to-label, .from-label {
  background-color: #c3c3c3;
  border-right: 2px solid black;
  border-bottom: 2px solid black;
  border-top: 2px solid #ffffff;
  border-left: 2px solid #ffffff;
  margin: 5px 15px;
  padding: 5px 25px;
  text-align: center;
  min-width: 35px;
}
.subject-label, .message-label {
  text-align: right;
  /* slightly larger to look more similar to To & From */
  font-size: 17px;
  text-align: right;
}
/* input fields */
.form-input, .form-textarea {
  padding: 5px;
  background-color: white;
  /* webcraftian black instead of auto white */
  color: black;
  /* why isn't default font being picked up? */
  font-family: 'MS Sans Serif', sans-serif;
  font-size: 15px;
  
  border-top: 2px solid black;
  border-left: 2px solid black;
  border-bottom: 2px solid #ffffff;
  border-right: 2px solid #ffffff;

  box-shadow: 
    inset 1px 1px 0px #ffffff,
    inset -1px -1px 0px #c3c3c3;
}
.form-textarea {
  display: flex;
  flex: 1;
  /* removes default resizing */
  resize: none;
  min-height: 180px;
}
.form-button {
  display: flex;
  /* moves button to end (remember) */
  justify-content: flex-end;
}
.send-button {
  color: black;
  /* allows you to align items horizontally */
  display: flex;
  justify-items: center;
  align-items: center;
  margin-top: -6px;
  background-color: #c3c3c3;
  border-right: 2px solid black;
  border-bottom: 2px solid black;
  border-top: 2px solid #ffffff;
  border-left: 2px solid #ffffff;
  font-family: 'MS Sans Serif', sans-serif;
  font-size: 18px;
  cursor: pointer;
  outline: none;
}
.send-button.active {
  border-top: 1px solid #808080;
    border-left: 1px solid #808080;
    border-right: 1px solid #ffffff;
    border-bottom: 1px solid #ffffff;
    box-shadow: 
        inset -1px -1px 0 #dfdfdf,
        inset 1px 1px 0 #000;
}
.send-icon {
  width: 26px;
  height: 26px;
  margin-right: 5px;
  /* aligns with 'Send' */
  margin-top: -3px;
}
input:focus, textarea:focus {
  outline: none;
}

::placeholder {
  color: grey;
}
.underline {
  text-decoration: underline;
  text-decoration-thickness: 1.5px;
}



/* RESUME page */
.resume-container {
  width: 100%;
  position: relative;
  /* padding-bottom: 141.42%; */
  height: 100%;
}
/* resume: EXTRACT */
.resume-content {
  background-color: #c3c3c3;
  /* positioning */
  position: relative;
  width: 70vw;
  height: 70vh;
  /* text color */
  color: black;
  /* keeps the grey border inside the content window WITHOUT pushing the window out (keeps border inside) */
  border: none;
  box-shadow: 
    inset 1px 1px 0px #808080,
    0 0 0 0px #c3c3c3;
  overflow: visible;
  display: flex;
  flex-direction: column;

}
.resume-container {
  width: 100%;
  height: 100%;
  display: flex;
  height: calc(100%); 
  min-height: 0; /* Allows children to shrink */
}
.resume-column-1 {
  display: flex;
  flex-direction: column;
  border-top: 3px solid grey;
  border-right: 3px solid grey;
  width: 33.33%;
  /* fit into parent */
  height: 100%;
}
.gif {
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
}
.obra-dinn {
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
}
.top-resume-column-1 {
  /* set this, or it will be huge */
  height: 200px;
  /* flex-grow, flex-shrink, flex-basis */
  flex: 0 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
  border-bottom: 3px solid grey; 
}
.middle-resume-column-1 {
  /* optional - flex: 1 to take up remaining space */
  padding: 10px;
  text-align: center;
  margin: 0 auto;
  border-bottom: 3px solid grey;
}
.bottom-resume-column-1 {
  /* flex-grow (takes up leftover space) */
  flex: 1;
  padding: 10px;
  min-height: 0;
  padding-bottom: 28px;
  text-align: center;
  margin: 0 auto;
}
.resume-column-2 {
  border-top: 3px solid grey;
  border-right: 3px solid grey;
  height: 98%;
  width: 33.33%;
}
.resume-column-3 {
  border-top: 3px solid grey;
  height: 98%;
  width: 33.33%;
}
/* laptop view (not widescreen) */
.resume-contact-title {
  text-align: center;
  margin: 0px;
}
.stats-section-text {
  display: flex;
}
.resume-blue-text, 
.resume-big-black-text {
  margin: 3px;
}
.resume-blue-text {
  color: blue;
}
.resume-about-section {
  margin: 0 auto;
  align-items: center;
  justify-content: center;
}
.resume-about-title {
  text-align: center;
  margin: 0 auto;
}
.resume-about-text {
  margin: 0;
  text-align: center;
}


.employment-title {
  text-align: center;
  margin-bottom: 8px;
}
.employment-job-title,
.employment-job-location,
.employment-job-description {
  margin: 5px;
}

.employment-job-description {
  margin-top: -10px;
}
.employment-job-description-1 {
  margin-top: 0px;
}
.job-title-underline {
  text-decoration: underline;
}
.education-title {
  text-align: center;
  margin: 5px;
}
.education-title-text {
  text-align: center;
  margin: 5px;
}
/* ... */

